# calc-flow

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/rules/: code-style.md
.github/workflows/: ci.yml
design/: tech_spec.md
docs/: introduction.md
src/calc_flow/: __init__.py  batch.py  checkpoint.py  context.py  expression.py  operator.py  pipeline.py
src/calc_flow/engine/: __init__.py  array.py  base.py  dataframe.py
src/calc_flow/runtime/: __init__.py  micro_batch.py  streaming.py
tests/calc_flow/: __init__.py  test_batch.py  test_checkpoint.py  test_context.py  test_expression.py  test_operator.py  test_pipeline.py
tests/calc_flow/engine/: __init__.py  test_array.py  test_base.py  test_dataframe.py
tests/calc_flow/runtime/: __init__.py  test_micro_batch.py  test_streaming.py
