[project]
name = "calc-flow"
version = "0.1.0"
description = "Composable calculation pipelines with pluggable engines"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datafusion>=53.0.0",
    "jax>=0.4",
    "numpy>=2.0.0",
    "pandas>=3.0.2",
    "polars>=1.40.1",
    "pyarrow>=24.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.14"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/calc_flow"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
